# mono-service

./: .gitignore  BUILD  MODULE.bazel  Makefile  WORKSPACE  go.mod  go.sum
k8s/: mono-service.yaml  service.yaml
policy/: auth.rego
protos/: buf.yaml
protos/common/v1/: BUILD.bazel  common.pb.go  common.proto
protos/user/v1/: BUILD.bazel  user.pb.go  user.proto  user_service.pb.go  user_service.proto  user_service_grpc.pb.go
rule-data/: allow_uri.json
services/common/consts/: BUILD.bazel  gorm.go
services/common/dao/: BUILD.bazel  gorm.go
services/common/dao/models/: BUILD.bazel  user.go
services/graph-service/: gqlgen.yml
services/graph-service/app/: BUILD.bazel  main.go
services/graph-service/graph/: BUILD.bazel  generated.go  resolver.go  schema.resolvers.go
services/graph-service/internal/middleware/: BUILD.bazel  auth.go
services/graph-service/internal/model/: BUILD.bazel  models_gen.go
services/graph-service/internal/service/: BUILD.bazel  auth_service.go  opa_service.go
services/graph-service/internal/utils/: BUILD.bazel  auth.go  role.go
services/graph-service/schema/: schema.graphqls
services/graph-service/tools/: generate.go
services/user-service/app/: BUILD.bazel  main.go
services/user-service/internal/dao/psql/: BUILD.bazel  init.go
services/user-service/internal/dao/psql/user/: BUILD.bazel  user.go
services/user-service/internal/service/: BUILD.bazel  user_service.go
