module(
    name = "mono-service",
    repo_name = "mono_service",
)

bazel_dep(name = "gazelle", version = "0.33.0")
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
# bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.0.0-rc1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_99designs_gqlgen", "com_github_go_chi_chi_v5", "com_github_golang_jwt_jwt_v4", "com_github_google_uuid", "com_github_joho_godotenv", "com_github_open_policy_agent_opa", "com_github_vektah_gqlparser_v2", "io_gorm_driver_postgres", "io_gorm_gorm", "org_golang_google_grpc", "org_golang_google_protobuf", "org_golang_x_crypto")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_static",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

use_repo(oci, "distroless_static")