load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["common.pb.go"],
    importpath = "github.com/0x726f6f6b6965/mono-service/protos/common/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
