load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "user.pb.go",
        "user_service.pb.go",
        "user_service_grpc.pb.go",
    ],
    importpath = "github.com/0x726f6f6b6965/mono-service/protos/user/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/common/v1:common",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
